--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 * {
-  
   background: rgb(211,211,211);
 }
 p {
@@ -7,8 +6,7 @@ p {
   font-size: 15px;
 }
 li {
-    text-align: left;
-    color: orange;
+    text-align: center;
 }
 
 img {
