--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ a {
   font-size: 15px;
 }
 
+.por {
+    list-style-position: inside;
+}
+
 #intro {
   padding: 25px 50px 75px;
   float: right;
